<resources>
    <string name="app_name">Cicili</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Iniciar Sesión</string>
    <string name="action_register">Registrarse</string>
    <string name="action_no_account">¿No tienes una cuenta?</string>
    <string name="action_forgotpsw">¿Olvidaste tu contraseña?</string>
    <string name="action_sign_in_short">Iniciar Sesion</string>
    <string name="error_invalid_email">Correo Electrónico incorrecto</string>
    <string name="error_invalid_password">Contraseña demasiado corta</string>
    <string name="error_incorrect_password">Contraseña Incorrecta</string>
    <string name="error_field_required">Campo requerido</string>
    <string name="error_field_requiredVenc">La fecha de vencimiento debe ser MM/AA</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="LoginFail">Datos de acceso incorrectos. Favor de verificar.</string>
    <string name="errorlistener">[EL] Ocurrio un error inesperado, intente nuevamente.</string>
    <string name="LoginSuccess">Sesión iniciada satisfactoriamente.</string>
    <string name="title_activity_main">Cicili</string>
    <string name="title_home">Inicio</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notificaciones</string>
    <string name="title_activity_request_password">Recuperar Contraseña</string>
    <string name="title_activity_register_client">Registro</string>
    <string name="register_content">Ingresa los datos para tu registro en Cicili</string>
    <string name="title_activity_forgot_psw">Recuperar Contraseña</string>
    <string name="hint_text">hint text</string>
    <string name="error_invalid_cpassword">Las contraseñas no coinciden.</string>
    <string name="contrasenia">Contraseña</string>
    <string name="confirma_contrasenia">Confirma Contraseña</string>
    <string name="telefono_celular">Teléfono Celular</string>
    <string name="correo_electronico">Correo Electrónico</string>
    <string name="successregister">Registro realizado correctamente</string>
    <string name="error_invalid_code">Código de verificación incorrecto</string>
    <string name="successvalidation">Validación correcta, Iniciar sesión.</string>
    <string name="successpendingvalidation">Validación de código correcto.</string>
    <string name="action_validate">Verificar</string>
    <string name="codeSMS">Código</string>
    <string name="errorvalidation">Código incorrecto, intentar nuevamente.</string>
    <string name="title_activity_validate">Verificación de Código</string>
    <string name="mensajeverificacion">Hemos enviado un código de verificación a tu cuenta de correo. Ingresalo para terminar el proceso de registro. </string>
    <string name="mensajeverificacionN">NOTA: Por favor revisa la bandeja de correo no deseado, en caso de no ver el correo de confirmación en la bandeja de entrada.</string>
    <string name="successlogin">Sesión iniciada satisfactoriamente</string>
    <string name="mensajeverificado">Has concluido tu registro satisfactoriamente. Ya puedes iniciar sesión en Cicili</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="ok">Iniciar Sesión</string>
    <string name="successvalidate">Has finalizado tu registro, ahora puedes iniciar sesión en Cicili.</string>
    <string name="seccesschange">Tu contraseña se ha cambiado, ahora puedes iniciar sesión en Cicili.</string>
    <string name="coderequest">Recuperar Contraseña</string>
    <string name="iniciorecuperacontrasenia">Para recuperar tu contraseña, ingresa el correo electrónico que registraste en CICILI.</string>
    <string name="requestpsw">Recuperar Contraseña</string>
    <string name="userfield">Correo Electrónico</string>
    <string name="validatecode">Valida Código</string>
    <string name="cancel">Cancelar</string>
    <string name="changepsw">Guardar Nueva Contraseña</string>
    <string name="appmat">Apellido Materno</string>
    <string name="apppat">Apellido Paterno</string>
    <string name="name">Nombre(s)</string>
    <string name="successpersonalvalidation">Datos personales configurados satisfactoriamente</string>
    <string name="successaddressvalidation">Dirección configurada satisfactoriamente</string>
    <string name="fecnac">Fecha de Nacimiento</string>
    <string name="title_activity_perfil_data">PerfilData</string>
    <string name="personaldata">Perfil</string>
    <string name="perfil">Perfil</string>
    <string name="pago">Forma de Pago</string>
    <string name="direccion">Direcciones</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="errordata">Ocurrio un error al registrar tus datos personales. Intentar nuevamente</string>
    <string name="calendario">Calendario</string>
    <string name="PersonalDataTitle">Ingresa tus datos personales</string>
    <string name="PaymentDataTitle">Registra Datos de Pago</string>
    <string name="pais">Pais</string>
    <string name="efectivo">Efectivo</string>
    <string name="tdd">Tarjeta Débito</string>
    <string name="TDC">Tarjeta Crédito</string>
    <string name="forma_de_pago">Forma de Pago</string>
    <string name="titular">Nombre del Titular</string>
    <string name="TipoT">Tipo de Tarjeta</string>
    <string name="visa">VISA</string>
    <string name="mc">MASTER CARD</string>
    <string name="amx">AMEX</string>
    <string name="vencimiento">F. Vencimiento</string>
    <string name="cvv">CVV</string>
    <string name="numt">Número de Tarjeta</string>
    <string name="paymentregister">Registrar</string>
    <string name="payment_title">Ingresa datos de tu tarjeta</string>
    <string name="tipopago">Selecciona un tipo de tarjeta.</string>
    <string name="formapago">Selecciona una forma de pago.</string>
    <string name="action_savee">Guardar</string>
    <string name="AddressDataTitle">Direcciones</string>
    <string name="AddressNew">Agrega una nueva dirección</string>
    <string name="alias">Nombre Corto</string>
    <string name="favorito">¿Es tu dirección predeterminada?   </string>
    <string name="calle">Calle</string>
    <string name="ext">Número Exterior</string>
    <string name="inte">Número Interior</string>
    <string name="Colonia">Colonia</string>
    <string name="cp">Código Postal</string>
    <string name="successpaymentvalidation">Datos de Pago configurados satisfactoriamente.</string>
    <string name="title_activity_maps">Actualizar Ubicación</string>
    <string name="title_address">Direcciones</string>
    <string name="title_orders">Pedidos</string>
    <string name="titulo_selecciona_direccion"> ¿A que dirección enviamos tu pedido?</string>
    <string name="normal_map">Normal Map</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="satellite_map">Satellite Map</string>
    <string name="terrain_map">Terrain Map</string>
    <string name="title_perfil">Perfil</string>
    <string name="title_activity_menu">Cicili</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="PaymentData">Cuentas Bancarias</string>
    <string name="help">Ayuda</string>
    <string name="serviceconditions">Legal</string>
    <string name="gettingDeviceLocation">Obteniendo ubicación de tu dispositivo</string>
    <string name="failedgetlocation">No se pudo obtener la ubicación de tu equipo.</string>
    <string name="setlocation">Especifica la ubicación de tu domicilio</string>
    <string name="addresslocation">Ubica en el mapa el punto de encuentro.</string>
    <string name="Guardar">Guardar</string>
    <string name="cliente">Cliente</string>
    <string name="fecha_de_nacimiento">Fecha de Nacimiento</string>
    <string name="tel_fono">Teléfono</string>
    <string name="correo_electr_nico">Correo Electrónico</string>
    <string name="empty" />
    <string name="title_pago">F. Pago</string>
    <string name="stepper">stepper</string>
    <string name="numerointext">Número Interno/Externo</string>
    <string name="tipocta">Tipo de Cuenta</string>
    <string name="RfcDataTitle">Datos de Facturación</string>
    <string name="rfc">RFC</string>
    <string name="razonsocial">Razón Social</string>
    <string name="successrfcvalidation">RFC registrado correctamente</string>
    <string name="sexo">Sexo</string>
    <string name="hombre">Hombre</string>
    <string name="mujer">Mujer</string>
    <string name="noindicar">No indicar</string>
    <string name="banco">Banco</string>
    <string name="e_sexo">Seleccionar Sexo</string>
    <string name="actualizar">Actualizar</string>
    <string name="successpersonalupdate">Datos personales actualizados correctamente.</string>
    <string name="vefifycardnumber">Verifica el Número de Tarjeta</string>
    <string name="successpaymentupdate">Datos de pago actualizados correctamente.</string>
    <string name="successaddressupdate">Dirección actualizada correctamente.</string>
    <string name="usocfdi">Uso de CFDI</string>
    <string name="foto_de_perfil">Foto de Perfil</string>
    <string name="litros">Litros</string>
    <string name="precio">Monto</string>
    <string name="tarjeta">Tarjeta</string>
    <string name="btnConfirma">Confirmar Pedido</string>
    <string name="mensajePagoPedido">El pago del gas es directamente al conductor de la pipa. Cicili NO cobra Gas, solo la comisión por el servicio marcada en los términos de uso por medio de la tarjeta registrada</string>
    <string name="concesionario">Concesionario</string>
    <string name="detallePedido">Detalle de tu Pedido</string>
    <string name="error_field_helpcvv">Son 3 o 4 digítos ubicados al reverso de tu tarjeta</string>
    <string name="conductor">Conductor</string>
    <string name="costo">Precio por litro</string>
    <string name="error_pedido"></string>
    <string name="error_invalid_value">Indica los litros o precio a pagar.</string>
    <string name="tiempo">Tiempo aproximado de llegada</string>
    <string name="title_activity_new_order">Realizar Pedido</string>
    <string name="error_invalid_motivo">Selecciona el motivo de cancelación.</string>
    <string name="title_activity_aclaracion">Aclaración</string>
    <string name="programar_pedido">Programar Pedido</string>
    <string name="schedule">Programa tu pedido para una fecha próxima.</string>
    <string name="fechaschedule">Fecha</string>
    <string name="horaschedule">Hora</string>
    <string name="direccionschedule">Dirección de Entrega</string>
    <string name="scheduebutton">Programar Pedido</string>
    <string name="litrosomonto">Indica los litros o precio a pagar.</string>
    <string name="error_noaddressselected">Selecciona una dirección</string>
    <string name="title_activity_legal">Contrato de Servicios</string>
</resources>