<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_perfil"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/personaldata" />
        <item
            android:id="@+id/navigation_payment"
            android:icon="@android:drawable/ic_dialog_dialer"
            android:title="@string/PaymentData" />
        <item
            android:id="@+id/navigation_address"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/direccion" />
        <item
            android:id="@+id/navigation_rfc"
            android:icon="@android:drawable/ic_menu_my_calendar"
            android:title="Datos Fiscales" />
    </group>

    <item android:title="Configuración">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
            <item
                android:id="@+id/nav_service"
                android:icon="@android:drawable/ic_menu_info_details"
                android:title="@string/serviceconditions" />
            <item
                android:id="@+id/nav_help"
                android:icon="@android:drawable/ic_menu_help"
                android:title="@string/help" />
        </menu>
    </item>

</menu>
